--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    margin-top: 100px;
+    margin-top: 250px;
 }
 
 .btn {
@@ -32,6 +32,7 @@ body {
     margin: auto;
     padding: 20px;
 }
+
 
 /* Individual Playlist Boxes */
 .playlist {
@@ -56,6 +57,10 @@ body {
 
 .playlist a:hover {
     text-decoration: underline;
+}
+
+#hidden-playlists {
+    margin-top: 10px;
 }
 
 /* Back Button */
