--- a/static/style.css
+++ b/static/style.css
@@ -59,8 +59,32 @@ body {
     text-decoration: underline;
 }
 
+.playlist button {
+    background-color: #1DB954;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.playlist button:hover {
+    background-color: #18a34c;
+}
+
 #hidden-playlists {
     margin-top: 10px;
+}
+
+#toggle-playlists {
+    background-color: #1DB954;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 /* Back Button */
